server/compilers/goLiteJS/src/test/ml1/valid/type2.go
// type declaration in function block
package main

func main() {
    type num int

    type (
        num int
        word string
    )

}
