server/compilers/goLiteJS/src/test/ml1/invalid/decl34.go
// missing right parenthesis in distributed type declaration
package main

type (
    num int
    float double
